log
Thu 05 Oct 2023 02:40:16 PM UTC: 
 sudoku.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:15: error: unused variable ‘k’ [-Werror=unused-variable]
   48 |     int i, j, k;
      |               ^
cc1: all warnings being treated as errors
Compilation failed
86e7995
Thu 05 Oct 2023 02:41:29 PM UTC: 
 sudoku.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:15: error: unused variable ‘k’ [-Werror=unused-variable]
   48 |     int i, j, k;
      |               ^
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:97:64: error: invalid application of ‘sizeof’ to incomplete type ‘List’
   97 |                         List *new_node = (List *)malloc(sizeof(List));
      |                                                                ^~~~
sudoku.c:98:33: error: invalid use of incomplete typedef ‘List’
   98 |                         new_node->data = adj_node;
      |                                 ^~
sudoku.c:99:33: error: invalid use of incomplete typedef ‘List’
   99 |                         new_node->next = list;
      |                                 ^~
cc1: all warnings being treated as errors
Compilation failed
eea19ed
Thu 05 Oct 2023 02:42:02 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:15: error: unused variable ‘k’ [-Werror=unused-variable]
   48 |     int i, j, k;
      |               ^
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:97:64: error: invalid application of ‘sizeof’ to incomplete type ‘List’
   97 |                         List *new_node = (List *)malloc(sizeof(List));
      |                                                                ^~~~
sudoku.c:98:33: error: invalid use of incomplete typedef ‘List’
   98 |                         new_node->data = adj_node;
      |                                 ^~
sudoku.c:99:33: error: invalid use of incomplete typedef ‘List’
   99 |                         new_node->next = list;
      |                                 ^~
test.c: At top level:
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:122:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  122 | int main( int argc, char *argv[] )
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
62b1bd4
